--- a/style.css
+++ b/style.css
@@ -43,6 +43,52 @@ input[type='checkbox'] {
   max-width: 100%;
 }
 
+.indicator {
+  height: 10px;
+  display: none;
+  align-items: center;
+  justify-content: space-between;
+  margin: 10px 0;
+}
+
+.indicator span {
+  width: 100%;
+  height: 100%;
+  background: lightgray;
+  border-radius: 5px;
+}
+
+.indicator span.medium {
+  margin: 0 3px;
+}
+
+.indicator span:before {
+  content: '';
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+}
+
+.indicator span.active.weak::after {
+  background-color: #ff4757;
+}
+.indicator span.active.medium::after {
+  background-color: orange;
+}
+.indicator span.active.strong::after {
+  background-color: var(--lightgreen-color);
+}
+
+.indicator .text {
+  font-size: 20px;
+  font-weight: 600;
+  display: none;
+}
+
+/* .indicator .text.weak{
+
+} */
+
 .result-container {
   background-color: #eee;
   display: flex;
